# autodocs

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/autodocs/: __init__.py  autodoc.py  autodocs.py  cli.py  transformer.py  visitor.py
tests/sample_modules/: test_example.py  test_module.py
