[tool.poetry]
name = "autodocs"
version = "0.1.0"
description = "Python cli package that uses OpenAI GPT-3.5 to generate docstrings and docs."
authors = ["Augustino, K"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
click = "^8.1.3"
libcst = "^0.4.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
